// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletHOC shallow mount #Hoc rendering renders correctly when loading is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HOC
    currentWallet={
        Immutable.Map {
            showDecryptModal: false,
        }
    }
    currentWalletDetails={Object {}}
    decryptWallet={[Function]}
    hideDecryptWalletModal={[Function]}
    loadWalletsBalances={[Function]}
    loading={
        Immutable.Map {
            decryptingWallet: false,
        }
    }
    startLedgerSync={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          currentWallet={
                    Immutable.Map {
                              showDecryptModal: false,
                    }
          }
          currentWalletDetails={Object {}}
          decryptWallet={[Function]}
          hideDecryptWalletModal={[Function]}
          loadWalletsBalances={[Function]}
          loading={
                    Immutable.Map {
                              decryptingWallet: false,
                    }
          }
          startLedgerSync={[Function]}
/>,
        <Modal.style
          destroyOnClose={true}
          footer={null}
          maskClosable={true}
          maskStyle={
                    Object {
                              "background": "rgba(232,237,239,.65)",
                            }
          }
          onCancel={[Function]}
          style={
                    Object {
                              "marginTop": "20px",
                            }
          }
          visible={false}
          width="585px"
>
          <Form.style__FormItem
                    colon={false}
                    label={
                              <Form.style__FormItemLabel>
                                        Please enter wallet password to proceed
                              </Form.style__FormItemLabel>
                    }
          >
                    <Input.style
                              onChange={[Function]}
                              onKeyPress={[Function]}
                              type="password"
                              value={null}
                    />
          </Form.style__FormItem>
          <Button.style
                    disabled={true}
                    onClick={[Function]}
                    type="primary"
          >
                    Confirm
          </Button.style>
</Modal.style>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "currentWallet": Immutable.Map {
            showDecryptModal: false,
},
          "currentWalletDetails": Object {},
          "decryptWallet": [Function],
          "hideDecryptWalletModal": [Function],
          "loadWalletsBalances": [Function],
          "loading": Immutable.Map {
            decryptingWallet: false,
},
          "startLedgerSync": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Form.style__FormItem
              colon={false}
              label={
                            <Form.style__FormItemLabel>
                                          Please enter wallet password to proceed
                            </Form.style__FormItemLabel>
              }
>
              <Input.style
                            onChange={[Function]}
                            onKeyPress={[Function]}
                            type="password"
                            value={null}
              />
</Form.style__FormItem>,
            <Button.style
              disabled={true}
              onClick={[Function]}
              type="primary"
>
              Confirm
</Button.style>,
          ],
          "destroyOnClose": true,
          "footer": null,
          "maskClosable": true,
          "maskStyle": Object {
            "background": "rgba(232,237,239,.65)",
          },
          "onCancel": [Function],
          "style": Object {
            "marginTop": "20px",
          },
          "visible": false,
          "width": "585px",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Input.style
                onChange={[Function]}
                onKeyPress={[Function]}
                type="password"
                value={null}
/>,
              "colon": false,
              "label": <Form.style__FormItemLabel>
                Please enter wallet password to proceed
</Form.style__FormItemLabel>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onChange": [Function],
                "onKeyPress": [Function],
                "type": "password",
                "value": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Confirm",
              "disabled": true,
              "onClick": [Function],
              "type": "primary",
            },
            "ref": null,
            "rendered": "Confirm",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            currentWallet={
                        Immutable.Map {
                                    showDecryptModal: false,
                        }
            }
            currentWalletDetails={Object {}}
            decryptWallet={[Function]}
            hideDecryptWalletModal={[Function]}
            loadWalletsBalances={[Function]}
            loading={
                        Immutable.Map {
                                    decryptingWallet: false,
                        }
            }
            startLedgerSync={[Function]}
/>,
          <Modal.style
            destroyOnClose={true}
            footer={null}
            maskClosable={true}
            maskStyle={
                        Object {
                                    "background": "rgba(232,237,239,.65)",
                                  }
            }
            onCancel={[Function]}
            style={
                        Object {
                                    "marginTop": "20px",
                                  }
            }
            visible={false}
            width="585px"
>
            <Form.style__FormItem
                        colon={false}
                        label={
                                    <Form.style__FormItemLabel>
                                                Please enter wallet password to proceed
                                    </Form.style__FormItemLabel>
                        }
            >
                        <Input.style
                                    onChange={[Function]}
                                    onKeyPress={[Function]}
                                    type="password"
                                    value={null}
                        />
            </Form.style__FormItem>
            <Button.style
                        disabled={true}
                        onClick={[Function]}
                        type="primary"
            >
                        Confirm
            </Button.style>
</Modal.style>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "currentWallet": Immutable.Map {
              showDecryptModal: false,
},
            "currentWalletDetails": Object {},
            "decryptWallet": [Function],
            "hideDecryptWalletModal": [Function],
            "loadWalletsBalances": [Function],
            "loading": Immutable.Map {
              decryptingWallet: false,
},
            "startLedgerSync": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Form.style__FormItem
                colon={false}
                label={
                                <Form.style__FormItemLabel>
                                                Please enter wallet password to proceed
                                </Form.style__FormItemLabel>
                }
>
                <Input.style
                                onChange={[Function]}
                                onKeyPress={[Function]}
                                type="password"
                                value={null}
                />
</Form.style__FormItem>,
              <Button.style
                disabled={true}
                onClick={[Function]}
                type="primary"
>
                Confirm
</Button.style>,
            ],
            "destroyOnClose": true,
            "footer": null,
            "maskClosable": true,
            "maskStyle": Object {
              "background": "rgba(232,237,239,.65)",
            },
            "onCancel": [Function],
            "style": Object {
              "marginTop": "20px",
            },
            "visible": false,
            "width": "585px",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Input.style
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  type="password"
                  value={null}
/>,
                "colon": false,
                "label": <Form.style__FormItemLabel>
                  Please enter wallet password to proceed
</Form.style__FormItemLabel>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onChange": [Function],
                  "onKeyPress": [Function],
                  "type": "password",
                  "value": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Confirm",
                "disabled": true,
                "onClick": [Function],
                "type": "primary",
              },
              "ref": null,
              "rendered": "Confirm",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`WalletHOC shallow mount #Hoc rendering renders correctly when loading is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HOC
    currentWallet={
        Immutable.Map {
            showDecryptModal: false,
        }
    }
    currentWalletDetails={Object {}}
    decryptWallet={[Function]}
    hideDecryptWalletModal={[Function]}
    loadWalletsBalances={[Function]}
    loading={
        Immutable.Map {
            decryptingWallet: true,
        }
    }
    startLedgerSync={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          currentWallet={
                    Immutable.Map {
                              showDecryptModal: false,
                    }
          }
          currentWalletDetails={Object {}}
          decryptWallet={[Function]}
          hideDecryptWalletModal={[Function]}
          loadWalletsBalances={[Function]}
          loading={
                    Immutable.Map {
                              decryptingWallet: true,
                    }
          }
          startLedgerSync={[Function]}
/>,
        <Modal.style
          destroyOnClose={true}
          footer={null}
          maskClosable={true}
          maskStyle={
                    Object {
                              "background": "rgba(232,237,239,.65)",
                            }
          }
          onCancel={[Function]}
          style={
                    Object {
                              "marginTop": "20px",
                            }
          }
          visible={false}
          width="585px"
>
          <Form.style__FormItem
                    colon={false}
                    label={
                              <Form.style__FormItemLabel>
                                        Please enter wallet password to proceed
                              </Form.style__FormItemLabel>
                    }
          >
                    <Input.style
                              onChange={[Function]}
                              onKeyPress={[Function]}
                              type="password"
                              value={null}
                    />
          </Form.style__FormItem>
          <WalletHOC.style__StyledSpin
                    delay={0}
                    tip="Decrypting Wallet..."
          />
</Modal.style>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "currentWallet": Immutable.Map {
            showDecryptModal: false,
},
          "currentWalletDetails": Object {},
          "decryptWallet": [Function],
          "hideDecryptWalletModal": [Function],
          "loadWalletsBalances": [Function],
          "loading": Immutable.Map {
            decryptingWallet: true,
},
          "startLedgerSync": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Form.style__FormItem
              colon={false}
              label={
                            <Form.style__FormItemLabel>
                                          Please enter wallet password to proceed
                            </Form.style__FormItemLabel>
              }
>
              <Input.style
                            onChange={[Function]}
                            onKeyPress={[Function]}
                            type="password"
                            value={null}
              />
</Form.style__FormItem>,
            <WalletHOC.style__StyledSpin
              delay={0}
              tip="Decrypting Wallet..."
/>,
          ],
          "destroyOnClose": true,
          "footer": null,
          "maskClosable": true,
          "maskStyle": Object {
            "background": "rgba(232,237,239,.65)",
          },
          "onCancel": [Function],
          "style": Object {
            "marginTop": "20px",
          },
          "visible": false,
          "width": "585px",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Input.style
                onChange={[Function]}
                onKeyPress={[Function]}
                type="password"
                value={null}
/>,
              "colon": false,
              "label": <Form.style__FormItemLabel>
                Please enter wallet password to proceed
</Form.style__FormItemLabel>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onChange": [Function],
                "onKeyPress": [Function],
                "type": "password",
                "value": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "delay": 0,
              "tip": "Decrypting Wallet...",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            currentWallet={
                        Immutable.Map {
                                    showDecryptModal: false,
                        }
            }
            currentWalletDetails={Object {}}
            decryptWallet={[Function]}
            hideDecryptWalletModal={[Function]}
            loadWalletsBalances={[Function]}
            loading={
                        Immutable.Map {
                                    decryptingWallet: true,
                        }
            }
            startLedgerSync={[Function]}
/>,
          <Modal.style
            destroyOnClose={true}
            footer={null}
            maskClosable={true}
            maskStyle={
                        Object {
                                    "background": "rgba(232,237,239,.65)",
                                  }
            }
            onCancel={[Function]}
            style={
                        Object {
                                    "marginTop": "20px",
                                  }
            }
            visible={false}
            width="585px"
>
            <Form.style__FormItem
                        colon={false}
                        label={
                                    <Form.style__FormItemLabel>
                                                Please enter wallet password to proceed
                                    </Form.style__FormItemLabel>
                        }
            >
                        <Input.style
                                    onChange={[Function]}
                                    onKeyPress={[Function]}
                                    type="password"
                                    value={null}
                        />
            </Form.style__FormItem>
            <WalletHOC.style__StyledSpin
                        delay={0}
                        tip="Decrypting Wallet..."
            />
</Modal.style>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "currentWallet": Immutable.Map {
              showDecryptModal: false,
},
            "currentWalletDetails": Object {},
            "decryptWallet": [Function],
            "hideDecryptWalletModal": [Function],
            "loadWalletsBalances": [Function],
            "loading": Immutable.Map {
              decryptingWallet: true,
},
            "startLedgerSync": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Form.style__FormItem
                colon={false}
                label={
                                <Form.style__FormItemLabel>
                                                Please enter wallet password to proceed
                                </Form.style__FormItemLabel>
                }
>
                <Input.style
                                onChange={[Function]}
                                onKeyPress={[Function]}
                                type="password"
                                value={null}
                />
</Form.style__FormItem>,
              <WalletHOC.style__StyledSpin
                delay={0}
                tip="Decrypting Wallet..."
/>,
            ],
            "destroyOnClose": true,
            "footer": null,
            "maskClosable": true,
            "maskStyle": Object {
              "background": "rgba(232,237,239,.65)",
            },
            "onCancel": [Function],
            "style": Object {
              "marginTop": "20px",
            },
            "visible": false,
            "width": "585px",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Input.style
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  type="password"
                  value={null}
/>,
                "colon": false,
                "label": <Form.style__FormItemLabel>
                  Please enter wallet password to proceed
</Form.style__FormItemLabel>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onChange": [Function],
                  "onKeyPress": [Function],
                  "type": "password",
                  "value": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "delay": 0,
                "tip": "Decrypting Wallet...",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
